# gitwalk

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yml
src/gitwalk/: __init__.py  walker.py
tests/: test_walker.py
