[project]
name = "gitwalk"
version = "0.1.0"
description = "A directory walker that respects .gitignore rules"
authors = [
    { name = "Avi Yeger", email = "yeger00@gmail.com" }
]
dependencies = [
    "pathspec>=0.11.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
